--- a/leaflet map v2/css.css
+++ b/leaflet map v2/css.css
@@ -1,3 +1,33 @@
+.container {
+    display: flex;
+    flex-direction: row !important;
+    width: 100%;
+}
+
+.fields mat-form-field {
+    width: 100%;
+    font-size: 12px;
+}
+
+.container .text {
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    color: gray;
+    margin-left: 6px;
+}
+
+.container .text span span {
+    color: black;
+}
+
+.fields {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
 .greenBorder {
     border: 2px solid #3CB371;
 }
