--- a/leaflet map v2/css.css
+++ b/leaflet map v2/css.css
@@ -1,3 +1,56 @@
+.submit {
+    margin-top: 10px;
+}
+
+.blur {
+    filter: blur(5px);
+    pointer-events: none;
+}
+
+.modal p {
+    margin: 0 0 6px 0;
+    font-size: 14px;
+}
+
+.modal {
+    position: absolute;
+    opacity: 0;
+    top: 10px;
+    border-radius: 14px;
+    right: -250px;
+    background-color: white;
+    transition: right 0.3s, opacity 0.3s;
+    width: 100%;
+    max-width: 290px;
+    border: 1px solid gray;
+    padding: 4px;
+}
+
+.modal textarea {
+    height: 64px;
+    max-width: 100%;
+}
+
+.move {
+    right: 4px;
+    opacity: 1;
+}
+
+mat-form-field {
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.optionally_info_btn {
+    position: fixed;
+    top: -46px;
+    right: -235px;
+}
+
+.noUi-tooltip {
+    font-size: 14px;
+}
+
 .ruler canvas {
     position: fixed;
     top: -126px;
@@ -171,13 +224,13 @@ mat-card-header span {
 
 .maxValue {
     position: absolute;
-    right: -70px;
+    right: -50px;
     top: 0;
 }
 
 .minValue {
     position: absolute;
-    left: -70px;
+    left: -50px;
     top: 0;
 }
 
