--- a/leaflet map v2/css.css
+++ b/leaflet map v2/css.css
@@ -44,7 +44,8 @@ mat-form-field {
 .optionally_info_btn {
     position: fixed;
     top: -46px;
-    right: -235px;
+    right: -298px;
+    width: 284px;
 }
 
 .noUi-tooltip {
@@ -57,6 +58,7 @@ mat-form-field {
     border: 1px solid #dad7d7;
     border-radius: 9px;
 }
+
 .container {
     display: flex;
     flex-direction: row !important;
@@ -100,8 +102,8 @@ mat-form-field {
     transition: background-color 500ms;
 }
 
-.infoTable > button {
-    margin: 4px;
+.infoTable>button {
+    margin: 2px 6px;
 }
 
 ng-component {
@@ -222,16 +224,21 @@ mat-card-header span {
     padding: 4px;
 }
 
-.maxValue {
+.maxValue,
+.minValue {
     position: absolute;
-    right: -50px;
     top: 0;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.maxValue {
+    right: 10px;
 }
 
 .minValue {
-    position: absolute;
-    left: -50px;
-    top: 0;
+    left: 10px;
 }
 
 .inputs {
@@ -264,7 +271,8 @@ mat-slider {
 #slider {
     position: fixed;
     top: -30px;
-    width: 100%;
+    width: 92%;
+    left: 56px;
     pointer-events: none;
 }
 
@@ -277,6 +285,15 @@ mat-slider {
     left: 163px;
 }
 
+.export {
+    margin-top: 8px;
+}
+
+.export,
+.notes {
+    width: 284px;
+}
+
 .slider mat-slider,
 mat-slide-toggle {
     margin-left: 10px;
@@ -285,4 +302,84 @@ mat-slide-toggle {
 [data-handle="0"],
 [data-handle="3"] {
     display: none;
+}
+
+
+#preloader {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    top: 78px;
+    left: 126px;
+}
+
+#loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #fff;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+#loader:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #fff;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
+}
+
+#loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #fff;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
